; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/renderer/extr_tr_curve.c_InvertErrorTable.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/renderer/extr_tr_curve.c_InvertErrorTable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_GRID_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (float*, i32, i32)* @InvertErrorTable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @InvertErrorTable(float* %0, i32 %1, i32 %2) #0 {
  %4 = alloca float*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  store float* %0, float** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %10 = load i32, i32* @MAX_GRID_SIZE, align 4
  %11 = zext i32 %10 to i64
  %12 = load i32, i32* @MAX_GRID_SIZE, align 4
  %13 = zext i32 %12 to i64
  %14 = call i8* @llvm.stacksave()
  store i8* %14, i8** %8, align 8
  %15 = mul nuw i64 2, %13
  %16 = alloca float, i64 %15, align 16
  store i64 %13, i64* %9, align 8
  %17 = bitcast float* %16 to float**
  %18 = load float*, float** %4, align 8
  %19 = bitcast float* %18 to float**
  %20 = mul nuw i64 2, %13
  %21 = mul nuw i64 4, %20
  %22 = trunc i64 %21 to i32
  %23 = call i32 @Com_Memcpy(float** %17, float** %19, i32 %22)
  store i32 0, i32* %7, align 4
  br label %24

24:                                               ; preds = %41, %3
  %25 = load i32, i32* %7, align 4
  %26 = load i32, i32* %5, align 4
  %27 = icmp slt i32 %25, %26
  br i1 %27, label %28, label %44

28:                                               ; preds = %24
  %29 = mul nsw i64 0, %13
  %30 = getelementptr inbounds float, float* %16, i64 %29
  %31 = load i32, i32* %7, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds float, float* %30, i64 %32
  %34 = load float, float* %33, align 4
  %35 = load float*, float** %4, align 8
  %36 = mul nsw i64 1, %11
  %37 = getelementptr inbounds float, float* %35, i64 %36
  %38 = load i32, i32* %7, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds float, float* %37, i64 %39
  store float %34, float* %40, align 4
  br label %41

41:                                               ; preds = %28
  %42 = load i32, i32* %7, align 4
  %43 = add nsw i32 %42, 1
  store i32 %43, i32* %7, align 4
  br label %24

44:                                               ; preds = %24
  store i32 0, i32* %7, align 4
  br label %45

45:                                               ; preds = %65, %44
  %46 = load i32, i32* %7, align 4
  %47 = load i32, i32* %6, align 4
  %48 = icmp slt i32 %46, %47
  br i1 %48, label %49, label %68

49:                                               ; preds = %45
  %50 = mul nsw i64 1, %13
  %51 = getelementptr inbounds float, float* %16, i64 %50
  %52 = load i32, i32* %6, align 4
  %53 = sub nsw i32 %52, 1
  %54 = load i32, i32* %7, align 4
  %55 = sub nsw i32 %53, %54
  %56 = sext i32 %55 to i64
  %57 = getelementptr inbounds float, float* %51, i64 %56
  %58 = load float, float* %57, align 4
  %59 = load float*, float** %4, align 8
  %60 = mul nsw i64 0, %11
  %61 = getelementptr inbounds float, float* %59, i64 %60
  %62 = load i32, i32* %7, align 4
  %63 = sext i32 %62 to i64
  %64 = getelementptr inbounds float, float* %61, i64 %63
  store float %58, float* %64, align 4
  br label %65

65:                                               ; preds = %49
  %66 = load i32, i32* %7, align 4
  %67 = add nsw i32 %66, 1
  store i32 %67, i32* %7, align 4
  br label %45

68:                                               ; preds = %45
  %69 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %69)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @Com_Memcpy(float**, float**, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
